--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       }
 
       .html-image-container {
-        width: 250px;
-        background-color: black;
-        border-radius: 5px;
-        margin-left: 20px;
+        width: 200px;
         /* Adjust the margin to control the space between image and loader */
       }
 
@@ -55,7 +52,7 @@
     <div id="root">
       <div class="image-container">
         <img
-          src="https://res.cloudinary.com/de8tf7yki/image/upload/v1707546218/vxdgvwzfurjr6dbrarwh.webp"
+          src="https://res.cloudinary.com/de8tf7yki/image/upload/v1707548568/agr3o0strwojjzvyjx3h.png"
           alt="Centered Icon"
           class="html-image-container"
         />
