--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reactjs BoilerPlate</title>
+    <title>Chatbot</title>
 
     <style>
       body {
@@ -55,15 +55,6 @@
     </style>
   </head>
   <body>
-    <div id="root">
-      <div class="image-container">
-        <img
-          src="https://res.cloudinary.com/de8tf7yki/image/upload/v1707548568/agr3o0strwojjzvyjx3h.png"
-          alt="Centered Icon"
-          class="html-image-container"
-        />
-      </div>
-    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
